cmake_minimum_required(VERSION 3.0)

set(SOURCES gstfastspectrum.cpp gstmoodbarplugin.cpp)

add_library(gstmoodbar STATIC ${SOURCES})

target_include_directories(gstmoodbar PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GLIB_INCLUDE_DIRS}
  ${GOBJECT_INCLUDE_DIRS}
  ${GSTREAMER_INCLUDE_DIRS}
  ${GSTREAMER_BASE_INCLUDE_DIRS}
  ${GSTREAMER_AUDIO_INCLUDE_DIRS}
  ${FFTW3_INCLUDE_DIR}
  ${Qt5Core_INCLUDE_DIRS}
)

target_link_libraries(gstmoodbar PRIVATE
  ${GLIB_LIBRARIES}
  ${GOBJECT_LIBRARIES}
  ${GSTREAMER_LIBRARIES}
  ${GSTREAMER_BASE_LIBRARIES}
  ${GSTREAMER_AUDIO_LIBRARIES}
  ${FFTW3_FFTW_LIBRARY}
  ${Qt5Core_LIBRARIES}
)
